<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AllDoors</string>
    <string name="title_section1">Клиенты</string>
    <string name="title_section2">Добавить клиента</string>
    <string name="title_section3">Двери</string>
    <string name="action_settings">Settings</string>
    <string name="order_first_name">Имя</string>
    <string name="order_second_name">Фамилия</string>
    <string name="order_middle_name">Отчество (необязательно)</string>
    <string name="order_phone">Телефон (необязательно)</string>
    <string name="order_mobile">Мобильный</string>
    <string name="order_email">E-mail (необязательно)</string>
    <string name="order_city">Минск</string>
    <string name="order_street">Улица</string>
    <string name="order_building">Дом</string>
    <string name="order_flat">Квартира (офис)</string>
    <string name="order_date">Дата</string>
    <string name="button_add">Добавить</string>

</resources>
