<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/order_first_name"
            android:ems="@integer/order_ems"
            android:id="@+id/editTextFirstName"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/order_second_name"
            android:ems="@integer/order_ems"
            android:id="@+id/editTextSecondName"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/order_middle_name"
            android:ems="@integer/order_ems"
            android:id="@+id/editTextMiddleName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/order_phone"
            android:ems="@integer/order_ems"
            android:id="@+id/editTextPhone" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/order_mobile"
            android:ems="@integer/order_ems"
            android:id="@+id/editTextMobile"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/order_email"
            android:ems="@integer/order_ems"
            android:id="@+id/editTextEmail" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/order_city"
            android:ems="@integer/order_ems"
            android:id="@+id/editTextCity" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/order_street"
            android:ems="@integer/order_ems"
            android:id="@+id/editTextStreet" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/order_building"
            android:ems="@integer/order_ems"
            android:id="@+id/editTextBuilding" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/order_flat"
            android:ems="@integer/order_ems"
            android:id="@+id/editTextFlat" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/order_date"
            android:ems="@integer/order_ems"
            android:id="@+id/editTextDate" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add"
            android:id="@+id/btnAdd" />

    </LinearLayout>

</ScrollView>